--- a/package.yml
+++ b/package.yml
@@ -23,12 +23,15 @@ page:
             table_name: rex_securit_ip_access
         be_login:
             title: 'translate:securit_be_login'
-        be_user_log:
-            title: 'translate:securit_be_user_log'
         header:
             title: 'translate:securit_header'
         checks:
             title: 'translate:securit_checks'
+
+pages:
+    system/log/securit_be_user:
+        title: translate:securit_be_user_log
+        perm: admin
 
 console_commands:
     securit:ip_access: \FriendsOfRedaxo\Securit\Command\IPAccess
